---------------------------------------------------------------------------------------------------
Version: 4.1.9
Date: 2021.08.XX
  Changes:
    - Increase stack sizes for compressed belts and variants of
  Bugfixes:
    - Fix failure to load on latest experimental caused by massive tech costs
    - Fix crash when compressing entities that don't specify max_health
    - Fix compressed recipes with random results sometimes having the incorrect result amount
---------------------------------------------------------------------------------------------------
Version: 4.1.8
Date: 2021.07.26
  Changes:
    - Burner assemblers have less of a speed penalty compared to their electric brethren
      (they are still less efficient in ore/watt, and cannot take modules)
    - Add an entry to game log when not compressing items due to massive stack sizes
  Bugfixes:
    - Fix some buildings losing their crafting categories when compressed
    - Fix handling outputs > 65535
---------------------------------------------------------------------------------------------------
Version: 4.1.7
Date: 2021.06.02
  Bugfixes:
    - Fixed that certain entities were not compressed with angels component mode turned on
---------------------------------------------------------------------------------------------------
Version: 4.1.6
Date: 2021.03.28
  Changes:
    - You can now compress buildings in compressed assemblers
    - Allow compressor & co in SE space
  Bugfixes:
    - Fixed that compressed rocket silos had no fixed recipe set
    - Fixed recipes with the word 'compress' in its name not having a compressed version
    - Fixed compressed recipe results for a certain configuration for probability
---------------------------------------------------------------------------------------------------
Version: 4.1.5
Date: 2021.01.21
  Changes:
    - Updated for omnilib 4.1.6
---------------------------------------------------------------------------------------------------
Version: 4.1.4