@@ -20,6 +20,18 @@ if mods["omnimatter_marathon"] or mods["omnimatter_science"] then
     omni.lib.remove_prerequisite("compression-mining", "advanced-electronics-2")
     omni.lib.add_prerequisite("compression-nanite-buildings", "advanced-electronics-2")
 end
+
+omni.compression.tierless_buildings = omni.compression.tierless_buildings or {}
+if mods["bobpower"] and mods["bobrevamp"] and mods["bobplates"] then
+    if not settings.startup["bobmods-power-nuclear"] then return end
+    local tierless_buildings = omni.compression.tierless_buildings
+    tierless_buildings["nuclear-reactor-3"] = true
+    tierless_buildings["nuclear-reactor-2"] = true
+    if settings.startup["bobmods-plates-nuclearupdate"] or mods["bobores"] then
+        tierless_buildings["nuclear-reactor"] = true        
+    end
+end
+
 require("prototypes/compress-items")
 require("prototypes/compress-buildings")
 require("prototypes/compress-ores")
